k8s/production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecdtools.eclipse.org
  namespace: foundation-internal-webdev-apps
spec:
  selector:
    matchLabels:
      app: ecdtools.eclipse.org
      environment: production
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - preference:
          matchExpressions:
          - key: speed
            operator: NotIn
            values:
            - fast
        weight: 1
  replicas: 2
  template:
    metadata:
      labels:
        app: ecdtools.eclipse.org
        environment: production
    spec:
      containers:
      - name: nginx
        image: eclipsefdn/ecdtools.eclipse.org
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: '2'
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: ecdtools-eclipse-org
  namespace: foundation-internal-webdev-apps
spec:
  ports:
  - name: "http"
    port: 80
    protocol: "TCP"
    targetPort: 8080
  selector:
    app: ecdtools.eclipse.org
    environment: production
---
apiVersion: "route.openshift.io/v1"
kind: "Route"
metadata:
  name: ecdtools.eclipse.org
  namespace: foundation-internal-webdev-apps
  annotations:
    haproxy.router.openshift.io/timeout: 20s
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: "ecdtools.eclipse.org"
  path: "/"
  port:
    targetPort: "http"
  tls:
    insecureEdgeTerminationPolicy: "Redirect"
    termination: "edge"
  to:
    kind: "Service"
    name: ecdtools-eclipse-org
    weight: 100
